@startuml
'https://plantuml.com/class-diagram
hide circle
class SubscriptionsRepository <<interface>>
class PlansRepository <<interface>>

class Subscriptions {
    -startDate
    -endDate
    -paymentType
    -activeStatus
    +changePlan(long desiredVersion, Plans plan): void
}


class SubscriptionsController{
    +migrateAllToPlan(WebRequest request, String actualPlan, final String newPlan):void
    }
class SubscriptionsService{
 +migrateAllToPlan(long desiredVersion,String actualPlan, String newPlan):void

}


interface PlansRepository
{
+findAllByPlanAndActiveStatus_Active(Plans plan, boolean activeStatus_active): List<Subscriptions>
}


interface SubscriptionsRepository
{
+findByActiveStatus_ActiveAndUser(boolean active, User user): Optional<Subscriptions>
+save(S entity) : <S extends Subscriptions>
}



SubscriptionsController ..> SubscriptionsService: uses >
SubscriptionsService ..> SubscriptionsRepository: uses >
SubscriptionsService ..> PlansRepository: uses >
SubscriptionsRepository ..> Subscriptions: < record

@enduml


